First pass at migrating documentation

--- a/docs/docs/forms/creating-a-form.mdx
+++ b/docs/docs/forms/creating-a-form.mdx
@@ -38,7 +38,7 @@ The Forms section lists all of the currently supported inputs, these should be p
         'class': 'btn--naked',
         'type': 'link',
         'label': 'Cancel',
-        'href': '/home'
+        'href': '#home'
       })
     ]
   })
@@ -66,7 +66,7 @@ The Forms section lists all of the currently supported inputs, these should be p
   ...
   <div class="form__actions">
     <button type="submit" class="btn btn--primary">Primary Action</button>
-    <a href="/home" class="btn btn--naked">Cancel</a>
+    <a href="#home" class="btn btn--naked">Cancel</a>
   </div>
 </form>
 ```
@@ -201,7 +201,7 @@ The first button in the form actions will usually be the submit button and be a 
   <form method="POST" encType="application/x-www-form-urlencoded" class="form">
     <div class="form__actions">
       <button type="submit" class="btn btn--primary">Primary Action</button>
-      <a href="/home" class="btn btn--naked">Cancel</a>
+      <a href="#home" class="btn btn--naked">Cancel</a>
     </div>
   </form>
 </div>
@@ -222,7 +222,7 @@ If the form is editing an existing ‘thing’ rather than creating something ne
     </div>
     <div class="form__actions">
       <button type="submit" class="btn btn--primary">Primary Action</button>
-      <a href="/home" class="btn btn--naked">Cancel</a>
+      <a href="#home" class="btn btn--naked">Cancel</a>
       <button class="btn btn--danger u-float-right">Delete</button>
     </div>
   </form>
@@ -240,7 +240,7 @@ You can make the actions align to the left hand edge of a form by adding the `.f
     </div>
     <div class="form__actions form__actions--flush">
       <button type="submit" class="btn btn--primary">Primary Action</button>
-      <a href="/home" class="btn btn--naked">Cancel</a>
+      <a href="#home" class="btn btn--naked">Cancel</a>
       <button class="btn btn--danger u-float-right">Delete</button>
     </div>
   </form>
