--- a/docs/docs/forms/error-summary.mdx
+++ b/docs/docs/forms/error-summary.mdx
@@ -175,4 +175,11 @@ Finally, make sure the styles are being included into the Sass bundle.
 </TabItem>
 </Tabs>
 
+## Helper options
 
+You can configure this helper using the common helper options, the following options are specific to this helper.
+
+| Option | Type | Description |
+| ------ | ---- | ----------- |
+| heading | string | The text to be used as the error summary heading. This should always be "There is a problem". |
+| errors | array | An array of objects representing inputs with errors. Each object should contain the error text displayed under the input and the ID attribute of the input. |
