--- a/docs/docs/guides/accessibility.mdx
+++ b/docs/docs/guides/accessibility.mdx
@@ -37,7 +37,7 @@ The filter bar component contains a number of identified accessibility issues, s
 
 ### Form color picker
 
-The <a href="/forms/color">color</a> form component provides an interactive colour palette which is displayed when a person clicks on the colour preview. It is not possible to use this interactive picker using a keyboard or other common assistive technologies such as speech recognition software.
+The color form component provides an interactive colour palette which is displayed when a person clicks on the colour preview. It is not possible to use this interactive picker using a keyboard or other common assistive technologies such as speech recognition software.
 
 The colour picker does provide a fully accessible method of inputting a hexadecimal colour value through a regular text input, providing the person knows a suitable value to place in this field. For this reason we will not consider improving the experience of the interactive picker due to the difficulty of providing a fully accessible method of choosing from 65 million available colours.
 
