--- a/docs/docs/guides/helpers.mdx
+++ b/docs/docs/guides/helpers.mdx
@@ -107,7 +107,7 @@ The majority of Pulsar helpers accept the common options, unless otherwise state
         <tr>
             <td class="u-no-wrap"><code>href</code></td>
             <td>string</td>
-            <td>link, <a href="/components/button#example-link-type">button*</a></td>
+            <td>link, button*</td>
             <td>a URL or a URL fragment that the hyperlink points to
             <br /><br />
             <small><em>* Only available for button <code>link</code> type</em></small>
